sheesh
- added some utilities to make grabbing team ids easier
- MAJOR OVERHAUL of routes, found a better way
- added feature to get teams by abbreviation and team name
